--- a/login.html
+++ b/login.html
@@ -8,6 +8,12 @@
 </head>
 <body>
     <div class="hero">
+        <!-- <div class="cards_a">
+            <img src="card.png">
+        </div>
+        <div class="cards_b">
+            <img src="card.png">
+        </div> -->
         <div class="form-box">
             <div class="button-box">
                 <div id="btn"></div>
